<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="br.com.giltech.vistoc.activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_logo" />

    <EditText
        android:id="@+id/et_login_usuario"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_usuario"
        android:text="usuario@teste.com.br"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/et_login_senha"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:text="123456"
        android:textAlignment="center"
        />

    <ProgressBar
        android:id="@+id/pb_login_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btn_login_acessar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/botao_gradiente"
        android:text="@string/btn_Acessar" />

</LinearLayout>
